[gd_scene load_steps=3 format=3 uid="uid://7shts45fsc21"]

[ext_resource type="Script" path="res://quiz_4.gd" id="1_4t5fy"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_paxur"]

[node name="Quiz4" type="Node2D"]
script = ExtResource("1_4t5fy")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = SubResource("PlaceholderTexture2D_paxur")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 1024.0
offset_bottom = 256.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "What do you plan on doing?"
horizontal_alignment = 1

[node name="AnswerIceSkating" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 120.0
offset_top = 96.0
offset_right = 760.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 40
text = "Ice Skating
"

[node name="AnswerSledding" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 120.0
offset_top = 256.0
offset_right = 760.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 40
text = "Sledding
"

[node name="Reading" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 120.0
offset_top = 336.0
offset_right = 760.0
offset_bottom = 408.0
theme_override_font_sizes/font_size = 40
text = "Reading Inside"

[node name="AnswerSnowBallFights" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 120.0
offset_top = 176.0
offset_right = 760.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 40
text = " Snowball Fights"

[connection signal="pressed" from="TextureRect/Label/AnswerIceSkating" to="." method="_on_answer_ice_skating_pressed"]
[connection signal="pressed" from="TextureRect/Label/AnswerSledding" to="." method="_on_answer_sledding_pressed"]
[connection signal="pressed" from="TextureRect/Label/Reading" to="." method="_on_reading_pressed"]
[connection signal="pressed" from="TextureRect/Label/AnswerSnowBallFights" to="." method="_on_answer_snow_ball_fights_pressed"]
